# sv_extractor

./: .gitignore  Cargo.toml  README.md
arc/world/data/system/object_generation_range/: object_generation_range_array.bfbs
info/: names_changed.txt  names_original.txt  names_trpak.txt
schemas/: trpak.fbs  trpfd.fbs  trpfs.fbs
src/: lib.rs  main.rs
src/cli/: cli.rs  mod.rs
src/error_handler/: error.rs  mod.rs
src/extractors/: full_extractor.rs  mod.rs  trpak_extractor.rs  trpfs_extractor.rs
src/schemas/: mod.rs  object_generation_range_array_generated.rs  trpak_generated.rs  trpfd_generated.rs  trpfs_generated.rs
